update info about model and dataset for lab1 part3

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -27,11 +27,11 @@
     "\n",
     "## Part 3: Model Fine Tuning (10 points)\n",
     "\n",
-    "Building on the example notebook “gemma_xpu_finetuning.ipynb”, you will use a new dataset to finetune the gemma-2b model. Your notebook will be graded as follows:\n",
+    "Building on the example notebook “gemma_xpu_finetuning.ipynb”, you will use **gemma-2-2b-it** model and a new dataset [\"lavita/ChatDoctor-HealthCareMagic-100k\"](https://huggingface.co/datasets/lavita/ChatDoctor-HealthCareMagic-100k) to finetune the base **gemma-2-2b-it** model. Your notebook will be graded as follows:\n",
     "\n",
-    "* You first sample a few questions from the dataset as prompts to assess the quality of the completions from the original gemma-2b model. (3 points)\n",
-    "* Then you will use this dataset to finetune the **gemma-2b** model and save it as a new model called **gemma-2b-finetuned**. (4 points)\n",
-    "* Assess the finetuned model using the same test prompts. (3 points)"
+    "* You first sample a few questions from the dataset as prompts to assess the quality of the completions from the original gemma-2-2b-it model. (3 points)\n",
+    "* Then you will use this dataset to finetune the base model and save it as a new model called **gemma-2-2b-it-finetuned**. (4 points)\n",
+    "* Query the finetuned model using the same test prompts and compare its completions with the base model. (3 points)"
    ]
   },
   {
