--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -15,23 +15,41 @@
     "\n",
     "## Part 1:   Simple LLM Inference (10 points)\n",
     "\n",
-    "Execute the [Simple LLM Inference](simple_llm_inference.ipynb) to experiment with different models and their settings (e.g. temperature). Record the differences in their outputs when given the same input prompt. Evaluate the quality of their completions using your own words. (10 points)\n",
+    "Execute the example notebook [``Simple LLM Inference``](simple_llm_inference.ipynb) to experiment with different models and their settings (e.g. temperature). Record the differences in their outputs when given the same input prompt. Evaluate the quality of their completions using your own words. (10 points)\n",
+    "\n",
+    "### Questions: \n",
+    "\n",
+    "(1) What are the parameters you could configure for an LLM in this example notebook?\n",
+    "\n",
+    "(2) Pick one parameter, discuss the impact of changing its value on the model's completions.\n",
     "\n",
     "## Part 2: Prompt Engineering (10 points)\n",
     "\n",
-    "Use **gemma-2-2b-it** model and one prompt to generate the list of winners and years of the World Series Championships from 2010 to **2025**. Your prompt and completion will be graded using the following rubrics (out of total 10 points):\n",
+    "Use **gemma-2-2b-it** model and **one** prompt to generate the list of winners and years of the World Series Championships from 2010 to **2025**. You can use the example notebook [``LLM_Basics_with_HF.ipynb``](LLM_Basics_with_HF.ipynb) as a starting point. Your prompt and completion will be graded using the following rubrics:\n",
     "\n",
     "* the output should include a list of winners and years in json format. (6 points)\n",
     "* the json output must include the year of 2024 (2 points)\n",
-    "* the output need to discuss/explain the information about the year of 2025 (2 points)\n",
+    "* the output needs to discuss/explain the information about the year of 2025 (2 points)\n",
+    "\n",
+    "### Questions: \n",
+    "\n",
+    "(1) What years of the World Series Championship results are already known to the model without any context learning? Why?\n",
+    "\n",
+    "(2) When a model is loaded using transformers library (e.g., ``AutoModelForCausalLM.from_pretrained(model_id)`` ) from HuggingFace, what exact files are downloaded? \n",
     "\n",
     "## Part 3: Model Fine Tuning (10 points)\n",
     "\n",
-    "Building on the example notebook “gemma_xpu_finetuning.ipynb”, you will use **gemma-2-2b-it** model and a new dataset [\"lavita/ChatDoctor-HealthCareMagic-100k\"](https://huggingface.co/datasets/lavita/ChatDoctor-HealthCareMagic-100k) to finetune the base **gemma-2-2b-it** model. Your notebook will be graded as follows:\n",
+    "Building on the example notebook [``gemma_xpu_finetuning.ipynb``](gemma_xpu_finetuning.ipynb), you will use **gemma-2-2b-it** model and a new dataset [``lavita/ChatDoctor-HealthCareMagic-100k``](https://huggingface.co/datasets/lavita/ChatDoctor-HealthCareMagic-100k) to finetune the base **gemma-2-2b-it** model. Your notebook will be graded as follows:\n",
     "\n",
     "* You first sample a few questions from the dataset as prompts to assess the quality of the completions from the original gemma-2-2b-it model. (3 points)\n",
     "* Then you will use this dataset to finetune the base model and save it as a new model called **gemma-2-2b-it-finetuned**. (4 points)\n",
-    "* Query the finetuned model using the same test prompts and compare its completions with the base model. (3 points)"
+    "* Query the finetuned model using the same test prompts and compare its completions with the base model. (3 points)\n",
+    "\n",
+    "### Questions:\n",
+    "\n",
+    "(1) How do you prepare training and validate data samples and preprocess them according to a prompt template?\n",
+    "\n",
+    "(2) How long does it take for the model to finetune its parameters using the dataset? Discuss how some of the training parameters can affect the training time."
    ]
   },
   {
