--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "## Part 3: Model Fine Tuning (10 points)\n",
     "\n",
-    "Building on the example notebook [``gemma_xpu_finetuning.ipynb``](gemma_xpu_finetuning.ipynb), you will use **gemma-2-2b-it** model and a new dataset [``FreedomIntelligence/medical-o1-reasoning-SFT``](https://huggingface.co/datasets/FreedomIntelligence/medical-o1-reasoning-SFT) to finetune the base **gemma-2-2b-it** model. Your notebook will be graded as follows:\n",
+    "Building on the example notebook [``gemma_xpu_finetuning.ipynb``](gemma_xpu_finetuning.ipynb), you will use **gemma-2-2b-it** model and a new dataset, either [``lavita/ChatDoctor-HealthCareMagic-100k``](https://huggingface.co/datasets/lavita/ChatDoctor-HealthCareMagic-100k) (100k rows) **or** [``FreedomIntelligence/medical-o1-reasoning-SFT``](https://huggingface.co/datasets/FreedomIntelligence/medical-o1-reasoning-SFT) (25k rows) to finetune the base **gemma-2-2b-it** model. Your notebook will be graded as follows:\n",
     "\n",
     "* You first sample a few questions from the dataset as prompts to assess the quality of the completions from the original gemma-2-2b-it model. (3 points)\n",
     "* Then you will use this dataset to finetune the base model and save it as a new model called **gemma-2-2b-it-finetuned**. (4 points)\n",
