--- a/StartHere.ipynb
+++ b/StartHere.ipynb
@@ -80,6 +80,18 @@
     "  * `git commit -m \"Write a message describing changes here\"` will commit any changes that have been staged into the repositories history along with a message on what changes have been made.\n",
     "  * `git log` displays a commit history of the repository, showing the commit hash, author, date, and commit message.\n",
     "  * `git checkout <commit hash>` this command will revert the state of the repository to a previous commit.\n",
+    "\n",
+    "**Creating/Managing GitHub Repository and Downloading Files for Class Assignments:**\n",
+    "  1. If not already done, install and configure git on your local machine (see [this guide](https://docs.github.com/en/get-started/getting-started-with-git/set-up-git#setting-up-git)).\n",
+    "  2. Create private GitHub repository (see [this guide on creating a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/creating-a-new-repository) and [this guide on changing the repository's visability](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/managing-repository-settings/setting-repository-visibility#changing-a-repositorys-visibility)).\n",
+    "  3. Generate an SSH keypair for authentication (see [this guide](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)).\n",
+    "  4. Add your public key to your GitHub account (see [this guide](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account)).\n",
+    "  5. Clone your private repository to your local machine using SSH (see [this guide](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository#cloning-a-repository)).\n",
+    "  6. In the JupyterLab File Browser, right-click on the file you would like to download.\n",
+    "  7. You will see a popup menu, select the \"Download\" option in this menu.\n",
+    "  8. You can then move the file you downloaded to your cloned git repository.\n",
+    "  9. After you have moved all of your project files, you can add the files (`git add <file or directory>`) commit your changes (`git commit -m \"Message describing changes\"`).\n",
+    "  10. You can then push you changes to GitHub by running `git push` inside of your git repository.\n"
     "\n"
    ]
   }
