--- a/StartHere.ipynb
+++ b/StartHere.ipynb
@@ -91,7 +91,7 @@
     "  7. You will see a popup menu, select the \"Download\" option in this menu.\n",
     "  8. You can then move the file you downloaded to your cloned git repository.\n",
     "  9. After you have moved all of your project files, you can add the files (`git add <file or directory>`) commit your changes (`git commit -m \"Message describing changes\"`).\n",
-    "  10. You can then push you changes to GitHub by running `git push` inside of your git repository.\n"
+    "  10. You can then push you changes to GitHub by running `git push` inside of your git repository.\n",
     "\n"
    ]
   }
