--- a/StartHere.ipynb
+++ b/StartHere.ipynb
@@ -94,6 +94,15 @@
     "  10. You can then push you changes to GitHub by running `git push` inside of your git repository.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequently Asked Questions and Issues\n",
+    "\n",
+    "If you are having issues with any of the labs/homework assignments, please take a look at [this document](faq.md), which contains a list of FAQ/common issues and their solutions. Feel free to reach out to the instructor/TA if you are still unable to resolve an issue."
+   ]
   }
  ],
  "metadata": {
