--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "This lab is to practice the usage of Retrieval Augmented Generation (RAG) to understand how to enhance a LLM to obtain new knowledge without retraining, and experiment with AI agent using LangChain. EECE.5860 students will also write a new tool for a LangGraph agent. You will run Jupyter notebooks on Intel Tiber AI cloud. \n",
     "\n",
-    "## **Note** TThere are three parts in this lab. Parts 1 and 2 are for all the students. Part 3 is an additional requirement intended for EECE.5860 students only. There are some questions for each part, and you need to answer them in your lab report.\n",
+    "## **Note** There are three parts in this lab. Parts 1 and 2 are for all the students. Part 3 is an additional requirement intended for EECE.5860 students only. There are some questions for each part, and you need to answer them in your lab report.\n",
     "\n",
     "\n",
     "## Part 1:   RAG (10 points)\n",
@@ -54,7 +54,7 @@
     "\n",
     "## Part 3: Write your own tool for LangGraph based AI agent (5 points)\n",
     "\n",
-    "Complete the notebook [Lab3Part2-langgraph-agent.ipynb](Lab3Part2-langgraph-agent.ipynb) to experiment with AI agent using LangGraph and ChatNVIDIA chat model. You will need to write a new RAG tool, and supply it to the agent. You can follow the [simple_rag.ipynb](simple_rag.ipynb) example to implement the tool. \n",
+    "Complete the notebook [Lab3Part3-langgraph-agent.ipynb](Lab3Part3-langgraph-agent.ipynb) to experiment with AI agent using LangGraph and ChatNVIDIA chat model. You will need to write a new RAG tool, and supply it to the agent. You can follow the [simple_rag.ipynb](simple_rag.ipynb) example to implement the tool. \n",
     "\n",
     "\n",
     "# Lab submission \n",
