--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -45,12 +45,24 @@
     "* Modify the code to add a different LLM model for user to choose (3 points)\n",
     "* Answer the questions related to this implementation. (3 point)\n",
     "\n",
+    "### Questions: \n",
+    "\n",
+    "(1) What are the APIs used for chunking the documents? What arguments were used ?\n",
+    "(2) What would be the impact if you increase the parameter \"top_k\"? \n",
+    "(3) What text splitter API should you choose if your documents are Python programs? [API Reference](https://python.langchain.com/api_reference/text_splitters/index.html)\n",
+    "\n",
     "## Part 2: AI agent using LangChain APIs (10 points)\n",
     "\n",
     "Complete the notebook [Lab3Part2-langchain-agent.ipynb](Lab3Part2-langchain-agent.ipynb) to experiment with AI agent using LangChain and HuggingFace libraries. Specifically, you will use a LangChain agent to process and respond to user queries through a language model interface. It sets up a conversational agent by integrating LLM with other LangChain tools, enabling the agent to perform tasks such as query and calculation. The notebook includes incomplete code to initialize the agent, configure tools, and interact with the agent via natural language prompts. You will complete the missing code and make it operational. We will grade your part 2 of the lab as follows:\n",
     "\n",
     "* Your use LangChain and HuggingFace APIs to complete the code. (5 points)\n",
     "* Answer the questions related to this notebook. (5 points)\n",
+    "\n",
+    "### Questions: \n",
+    "\n",
+    "(1) What does a \"HuggingFace Endpoint\" do?\n",
+    "(2) What are \"chat models\" for LangChain?\n",
+    "(3) If you remove the \"wikipedia_tool\", what result would you get and why?\n",
     "\n",
     "## Part 3: Write your own tool for LangGraph based AI agent (5 points)\n",
     "\n",
@@ -64,11 +76,6 @@
     "You will need to manage your source code on github.com under your own private repository. Do not copy/paste complete source code in your lab report. Instead include in the report a link to your github repo.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
