replace HF endpoint chatmodel with ChatNVIDIA

--- a/Lab3Part2-langchain-agent.ipynb
+++ b/Lab3Part2-langchain-agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ea553de",
+   "id": "0",
    "metadata": {},
    "source": [
     "## Lab 3 Part 2 - EECE.4860/5860 at UMass Lowell\n",
@@ -13,64 +13,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e43c0c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import notebook_login\n",
-    "notebook_login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb49ccee-f90e-497a-a336-3463a29760d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
     "import sys\n",
-    "import torch\n",
-    "!{sys.executable} -m pip install --upgrade langchain langgraph langchain-community \n",
-    "!{sys.executable} -m pip install --upgrade langchain_huggingface wikipedia jsonpointer numexpr\n"
+    "!{sys.executable} -m pip install --upgrade langchain langchain-community langchain_nvidia_ai_endpoints wikipedia jsonpointer numexpr\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303e6586-3455-444e-936d-45a661d90c88",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_huggingface import HuggingFacePipeline, HuggingFaceEndpoint, ChatHuggingFace\n",
+    "import getpass\n",
+    "import os\n",
+    "from langchain_nvidia_ai_endpoints import ChatNVIDIA\n",
     "\n",
-    "from langchain.llms.huggingface_pipeline import HuggingFacePipeline\n",
+    "# You need to apply for a free API key from NVIDIA at https://build.nvidia.com\n",
+    "if not os.environ.get(\"NVIDIA_API_KEY\"):\n",
+    "  os.environ[\"NVIDIA_API_KEY\"] = getpass.getpass(\"Enter API key for NVIDIA: \")\n",
     "\n",
-    "\n",
-    "llm = HuggingFaceEndpoint(\n",
-    "    repo_id=\"microsoft/Phi-3-mini-4k-instruct\",\n",
-    "    task=\"text-generation\",\n",
-    "    max_new_tokens=400,\n",
-    "    do_sample=False,\n",
-    "    repetition_penalty=1.03,\n",
-    ")\n",
-    "\n",
-    "# TODO: create chat model using ChatHuggingFace() API and llm\n",
-    "# chat = ..."
+    "llm = ChatNVIDIA(model=\"meta/llama-3.1-70b-instruct\",\n",
+    "                           temperature=0.1,\n",
+    "                            max_tokens=512,\n",
+    "                            top_p=1.0,)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc7b120f-e3b9-402d-a2b2-05f1c17318da",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chains import LLMMathChain, LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMMathChain\n",
     "from langchain_community.utilities import WikipediaAPIWrapper\n",
-    "from langchain.agents import Tool, initialize_agent\n",
-    "from langchain.agents.agent_types import AgentType\n",
+    "from langchain.agents import Tool\n",
     "\n",
     "wikipedia_wrapper = WikipediaAPIWrapper()\n",
     "wikipedia_tool = Tool(\n",
@@ -78,7 +59,7 @@
     "    func=wikipedia_wrapper.run,\n",
     "    description=\"A tool for searching the Internet to find various information on the topics mentioned.\"\n",
     ")\n",
-    "math_chain = LLMMathChain.from_llm(llm=chat, verbose=True)\n",
+    "math_chain = LLMMathChain.from_llm(llm=llm, verbose=True)\n",
     "calculator = Tool.from_function(\n",
     "    name=\"Calculator\",\n",
     "    func=math_chain.run,\n",
@@ -92,10 +73,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099c1e2b-a723-475b-af77-feae5e93f8d9",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.agents import initialize_agent\n",
+    "from langchain.agents.agent_types import AgentType\n",
+    "\n",
     "# TODO: create LangChain agent using initialize_agent()\n",
     "agent = initialize_agent(\n",
     "    # TODO: initiate tools list\n",
@@ -112,6 +96,14 @@
     "\n",
     "# TODO: try a different query"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
