--- a/Lab3Part3-langgraph-agent.ipynb
+++ b/Lab3Part3-langgraph-agent.ipynb
@@ -174,6 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
     "langgraph_agent_executor = create_react_agent(llm_nvidia, tools)\n",
     "\n",
     "# Increase the recursion limit in the configuration\n",
