Updated example notebooks

--- a/LLM_Basics_with_HF.ipynb
+++ b/LLM_Basics_with_HF.ipynb
@@ -71,77 +71,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "iwjo5_Uucxkw"
-   },
-   "source": [
-    "### Import Necessary Packages\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "A9sUQ4WrP-Yr"
-   },
-   "outputs": [],
-   "source": [
-    "# import necessary packages\n",
-    "import os\n",
-    "import sys\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "iwjo5_Uucxkw"
-   },
-   "source": [
-    "### Install dependencies\n",
-    "Run the cell below to install all the required dependencies."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "r_nXPEsF7UWQ"
-   },
-   "outputs": [],
-   "source": [
-    "!{sys.executable} -m pip install --upgrade -q transformers huggingface_hub peft \\\n",
-    "  accelerate bitsandbytes datasets trl ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "2_bahJBmwvSp"
-   },
-   "source": [
-    "### Log into Hugging Face Hub\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "GIFFCHi-wvSp"
-   },
-   "outputs": [],
-   "source": [
-    "# you could use OS env variable to store the HF token\n",
-    "#from huggingface_hub import login\n",
-    "#login(os.environ[\"HF_TOKEN\"])\n",
-    "\n",
-    "# or use an input box on this notebook to copy/paste the token\n",
-    "from huggingface_hub import notebook_login\n",
-    "notebook_login()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "gFLddpGeaKh5"
    },
    "source": [
@@ -171,6 +100,41 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "2_bahJBmwvSp"
+   },
+   "source": [
+    "### Log into Hugging Face Hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "GIFFCHi-wvSp"
+   },
+   "outputs": [],
+   "source": [
+    "# you could use OS env variable to store the HF token\n",
+    "#from huggingface_hub import login\n",
+    "#login(os.environ[\"HF_TOKEN\"])\n",
+    "\n",
+    "# or use an input box on this notebook to copy/paste the token\n",
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "Jgl8ZjHpwvSq"
    },
    "source": [
@@ -185,12 +149,13 @@
    },
    "outputs": [],
    "source": [
+    "import torch\n",
     "#model_id = \"google/gemma-1.1-2b-it\"\n",
-    "#model_id = \"google/gemma-2-2b-it\"\n",
-    "model_id = \"google/gemma-2-9b-it\"\n",
+    "model_id = \"google/gemma-2-2b-it\"\n",
+    "# model_id = \"google/gemma-2-9b-it\"\n",
     "#model_id = \"google/gemma-2-27b-it\"\n",
     "#model_id = \"meta-llama/Llama-2-7b-hf\"\n",
-    "#device = \"cuda\"\n",
+    "\n",
     "USE_CPU = False\n",
     "device = \"xpu:0\" if torch.xpu.is_available() else \"cpu\"\n",
     "if USE_CPU:\n",
@@ -220,7 +185,6 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
     "\n",
     "# We could typically quantize the model to reduce its weight\n",
@@ -228,15 +192,6 @@
     "\n",
     "# Let's load the chosen model\n",
     "model = AutoModelForCausalLM.from_pretrained(model_id).to(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(model)"
    ]
   },
   {
@@ -292,13 +247,6 @@
     "text = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "print(text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -322,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
