--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -38,7 +38,9 @@
     "\n",
     "This guide is designed to be straightforward and user-friendly. No deep technical knowledge required, just a spark of creativity and a dash of curiosity.\n",
     "\n",
-    "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n"
+    "Ready to get started? Let's begin by setting up a few things and diving into the experience!\n",
+    "\n",
+    "**Note:** Please select the \"PyTorch GPU\" kernel when running this notebook"
    ]
   },
   {
@@ -49,11 +51,21 @@
    "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
-    "import sys\n",
-    "\n",
     "!echo \"Installation in progress...\"\n",
-    "!{sys.executable} -m pip install --user --upgrade diffusers transformers validators accelerate pillow tensorboardX ipywidgets ipython huggingface_hub invisible-watermark\n",
-    "!{sys.executable} -m pip install --user intel-extension-for-pytorch==2.6.10+xpu oneccl_bind_pt==2.6.0+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\n",
+    "# import sys\n",
+    "# !{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
+    "# !conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
+    "#     accelerate==0.23.0 \\\n",
+    "#     validators==0.22.0 \\\n",
+    "#     diffusers==0.18.2 \\\n",
+    "#     transformers==4.32.1 \\\n",
+    "#     tensorboardX \\\n",
+    "#     pillow \\\n",
+    "#     ipywidgets \\\n",
+    "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "import sys\n",
+    "# !{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1 \n",
+    "#!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
     "!echo \"Installtion complete...\""
    ]
   },
@@ -61,6 +73,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "---\n",
@@ -114,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -178,7 +200,7 @@
     "            StableDiffusionImg2ImgPipeline: The loaded pipeline.\n",
     "        \"\"\"\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")\n",
+    "        model_path = Path(f\"/opt/intel/big_data/GenAI/{model_id_or_path}\")\n",
     "        \n",
     "        if model_path.exists():\n",
     "            #print(f\"Loading the model from {model_path}...\")\n",
@@ -355,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "---\n",
@@ -379,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -540,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "---\n",
@@ -558,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -574,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "#### Reference and Guidelines for Models Used in This Notebook\n",
@@ -624,9 +646,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.6",
+   "display_name": "PyTorch GPU",
    "language": "python",
-   "name": "pytorch-2.6"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -638,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
