--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -42,15 +42,22 @@
    "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
+    "#import sys\n",
+    "#!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
+    "#    accelerate==0.23.0 \\\n",
+    "#    validators==0.22.0 \\\n",
+    "#    transformers==4.32.1 \\\n",
+    "#    sentencepiece \\\n",
+    "#    pillow \\\n",
+    "#    ipywidgets \\\n",
+    "#    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "\n",
     "import sys\n",
     "import site\n",
     "from pathlib import Path\n",
     "\n",
     "!echo \"Installation in progress...\"\n",
-    "# !{sys.executable} -m pip install torch==2.1.0.post3 torchvision==0.16.0.post3 torchaudio==2.1.0.post3 intel-extension-for-pytorch==2.1.40+xpu oneccl_bind_pt==2.1.400+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\n",
-    "# !{sys.executable} -m pip install numpy==1.26.4\n",
-    "!{sys.executable} -m pip install -U transformers==4.35.2 accelerate==0.23.0 --no-warn-script-location && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "# !{sys.executable} -m pip install -U transformers==4.35.2  --no-warn-script-location > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "\n",
     "def get_python_version():\n",
     "    return \"python\" + \".\".join(map(str, sys.version_info[:2]))\n",
@@ -190,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_CACHE_PATH = \"/home/common/data/Big_Data/GenAI/llm_models\"\n",
+    "MODEL_CACHE_PATH = \"/opt/intel/big_data/GenAI/llm_models\"\n",
     "class ChatBotModel:\n",
     "    \"\"\"\n",
     "    ChatBotModel is a class for generating responses based on text prompts using a pretrained model.\n",
@@ -781,22 +788,6 @@
     "\n",
     "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -815,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
