--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -17,6 +17,8 @@
    "source": [
     "## Retrieval Augmented Generation (RAG) with Hugging Face Transformers on Intel® Data Center GPU\n",
     "\n",
+    "**Note:** Please select the \"PyTorch 2.7\" kernel when running this notebook\n",
+    "\n",
     "#### 1. Retrieval Augmented Generation (RAG):\n",
     "Retrieval Augmented Generation (RAG) is a novel approach that combines the strengths of large-scale retrieval systems with the generative capabilities of transformer models like Falcon. In our RAG-based system, implemented on Intel® Data Center GPU Max Series 1100, when a question is posed, relevant documents or passages are retrieved from a corpus, and then fed alongside the query to the language model. This two-step process enables the model to leverage both external knowledge from the corpus and its internal knowledge to produce more informed and contextually accurate responses.\n",
     "\n",
@@ -63,7 +65,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "%pip install --upgrade langchain accelerate transformers datasets tiktoken chromadb sentence_transformers langchain-community ipywidgets --no-warn-script-location\n"
+    "%pip install langchain accelerate transformers datasets tiktoken chromadb sentence_transformers langchain-community ipywidgets --no-warn-script-location"
    ]
   },
   {
@@ -91,6 +93,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "import os\n",
     "import requests\n",
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "### RAGBot Class Implementation\n",
@@ -141,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Customizing Your RAG LLM Chatbot Experience\n",
@@ -316,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Disclaimer for Using Large Language Models\n",
@@ -530,21 +542,13 @@
     "\n",
     "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch GPU",
+   "display_name": "PyTorch 2.7",
    "language": "python",
-   "name": "pytorch-gpu"
+   "name": "pytorch27"
   },
   "language_info": {
    "codemirror_mode": {
@@ -556,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
