--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
-    "Ready to turn your words into visuals?, Let's get started!"
+    "Ready to turn your words into visuals?, Let's get started!\n",
+    "**Note**: Please select the \"PyTorch GPU\" kernel when running this notebook"
    ]
   },
   {
@@ -51,27 +52,53 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Required packages, install if not installed\n",
     "import sys\n",
-    "!{sys.executable} -m pip install --user --upgrade diffusers transformers validators accelerate pillow ipywidgets huggingface_hub invisible-watermark\n",
-    "!{sys.executable} -m pip install --user intel-extension-for-pytorch==2.6.10+xpu oneccl_bind_pt==2.6.0+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\n",
+    "import os\n",
+    "import site\n",
+    "from pathlib import Path\n",
     "\n",
-    "!echo \"Installation complete...\""
+    "!echo \"Installation in progress, please wait...\"\n",
+    "# !{sys.executable} -m pip cache purge > /dev/null\n",
+    "\n",
+    "# Comment out the following installation commands after their first execution.\n",
+    "# !{sys.executable} -m pip install torch==2.3.1+cxx11.abi torchvision==0.18.1+cxx11.abi torchaudio==2.3.1+cxx11.abi intel-extension-for-pytorch==2.3.110+xpu oneccl_bind_pt==2.3.100+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/\n",
+    "# !{sys.executable} -m pip install --upgrade transformers accelerate validators diffusers --user --no-warn-script-location > /dev/null\n",
+    "# !{sys.executable} -m pip install --upgrade pillow ipywidgets ipython invisible-watermark huggingface-hub --user --no-warn-script-location > /dev/null\n",
+    "\n",
+    "!echo \"Installation completed.\"\n",
+    "\n",
+    "# Get the site-packages directory\n",
+    "site_packages_dir = site.getsitepackages()[0]\n",
+    "\n",
+    "# add the site pkg directory where these pkgs are insalled to the top of sys.path\n",
+    "if not os.access(site_packages_dir, os.W_OK):\n",
+    "    user_site_packages_dir = site.getusersitepackages()\n",
+    "    if user_site_packages_dir in sys.path:\n",
+    "        sys.path.remove(user_site_packages_dir)\n",
+    "    sys.path.insert(0, user_site_packages_dir)\n",
+    "else:\n",
+    "    if site_packages_dir in sys.path:\n",
+    "        sys.path.remove(site_packages_dir)\n",
+    "    sys.path.insert(0, site_packages_dir)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "---\n",
@@ -122,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -197,7 +224,7 @@
     "        \"\"\"\n",
     "\n",
     "        print(\"Loading the model...\")\n",
-    "        model_path = Path(f\"/home/common/data/Big_Data/GenAI/{model_id_or_path}\")  \n",
+    "        model_path = Path(f\"/opt/intel/big_data/GenAI/diffusion/{model_id_or_path}\")  \n",
     "        \n",
     "        if model_path.exists():\n",
     "            #print(f\"Loading the model from {model_path}...\")\n",
@@ -326,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "---\n",
@@ -350,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "---\n",
@@ -534,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -550,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -600,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "#### Reference and Guidelines for Models Used in This Notebook\n",
@@ -645,13 +672,25 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.6",
+   "display_name": "PyTorch GPU",
    "language": "python",
-   "name": "pytorch-2.6"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -663,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
