--- a/Introduction_to_PyTorch.ipynb
+++ b/Introduction_to_PyTorch.ipynb
@@ -23,7 +23,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "> **Note**: Ensure that you have selected `PyTorch GPU` as the Jupyter kernel before proceeding."
+    "> **Note**: Ensure that you have selected `PyTorch 2.7` as the Jupyter kernel before proceeding."
    ]
   },
   {
@@ -49,6 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ[\"ZE_ENABLE_TRACING_LAYER\"] = \"1\"\n",
+    "\n",
     "import torch\n",
     "\n",
     "print(f\"PyTorch Version: {torch.__version__}\")\n",
@@ -333,9 +336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyTorch 2.5",
+   "display_name": "PyTorch 2.7",
    "language": "python",
-   "name": "pytorch-2.5"
+   "name": "pytorch27"
   },
   "language_info": {
    "codemirror_mode": {
@@ -347,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
