--- a/Toxicity_Detector_by_Meta.ipynb
+++ b/Toxicity_Detector_by_Meta.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "You will need a standard account on Intel Tiber AI Cloud, where we have tested this notebook. Students have been given instructions on how to sign up for an account on Intel Tiber.\n",
     "\n",
-    "Once you open this notebook on Tiber cloud, make sure to select **PyTorch 2.6** kernel to run it.\n",
+    "Once you open this notebook on Tiber cloud, make sure to select **PyTorch 2.7** kernel to run it.\n",
     "\n",
     "### HuggingFace setup\n",
     "\n",
@@ -167,6 +167,15 @@
    "metadata": {},
    "source": [
     "### Setup Device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
    ]
   },
   {
@@ -314,13 +323,6 @@
     "print(\"\\nToxicity score for toxic text:\")\n",
     "print(toxicity_score[\"toxicity\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -330,9 +332,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "PyTorch 2.6",
+   "display_name": "PyTorch 2.7",
    "language": "python",
-   "name": "pytorch-2.6"
+   "name": "pytorch27"
   },
   "language_info": {
    "codemirror_mode": {
@@ -344,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
