--- a/gemma_xpu_finetuning.ipynb
+++ b/gemma_xpu_finetuning.ipynb
@@ -14,11 +14,6 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "### Prerequisite\n",
-    "Account on Intel Tiber AI Cloud.\n",
-    "\n",
-    "This notebook was adapted and tested for EECE.4860/5860 Introduction to GenAI at UMass Lowell\n",
-    "\n",
     "## Finetuning Google's Gemma Model on Intel Max Series GPUs 🚀"
    ]
   },
@@ -29,7 +24,7 @@
    "source": [
     "Welcome to this exciting journey where we'll dive into the world of finetuning large language models (LLMs) using Intel® Data Center GPU Max Series! 🌟 \n",
     "\n",
-    "In this notebook, we'll be working with Google's Gemma model and optimizing it for a specific task using the Intel Max 1550 GPU. 💪\n",
+    "In this notebook, we'll be working with Google's Gemma model and optimizing it for a specific task using the Intel Max 1100 GPU. 💪\n",
     "___"
    ]
   },
@@ -75,13 +70,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%conda install datasets wandb trl peft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env HF_HOME=/opt/notebooks/.cache/huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "import site\n",
     "import os\n",
     "\n",
     "# Install the required packages\n",
-    "!{sys.executable} -m pip install peft==0.10.0 datasets ipywidgets transformers==4.38.2 wandb trl==0.8.3 accelerate==0.27.2 bitsandbytes==0.43.0 scipy==1.12.0\n",
-    "\n",
+    "#!{sys.executable} -m pip install --upgrade  \"transformers>=4.38.*\"\n",
+    "#!{sys.executable} -m pip install --upgrade  \"datasets>=2.18.*\"\n",
+    "#!{sys.executable} -m pip install --upgrade \"wandb>=0.16.*\"\n",
+    "#!{sys.executable} -m pip install --upgrade \"trl>=0.7.11\"\n",
+    "#!{sys.executable} -m pip install --upgrade \"peft>=0.9.0\"\n",
+    "#!{sys.executable} -m pip install --upgrade \"accelerate>=0.28.*\"\n",
     "\n",
     "# Get the site-packages directory\n",
     "site_packages_dir = site.getsitepackages()[0]\n",
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "source": [
     "We'll now make sure to optimize our environment for the Intel GPU by setting the appropriate environment variables and configuring the number of cores and threads. This will ensure we get the best performance out of our hardware! ⚡"
@@ -109,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,11 +144,12 @@
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"0\"\n",
     "#HF_TOKEN = os.environ[\"HF_TOKEN\"]\n",
     "\n",
-    "# Set the LD_PRELOAD environment variable\n",
-    "ld_preload = os.environ.get(\"LD_PRELOAD\", \"\")\n",
-    "conda_prefix = os.environ.get(\"CONDA_PREFIX\", \"\")\n",
-    "# Improve memory allocation performance, if tcmalloc is not available, please comment this line out\n",
-    "os.environ[\"LD_PRELOAD\"] = f\"{ld_preload}:{conda_prefix}/lib/libtcmalloc.so\"\n",
+    "# # Set the LD_PRELOAD environment variable\n",
+    "# ld_preload = os.environ.get(\"LD_PRELOAD\", \"\")\n",
+    "# conda_prefix = os.environ.get(\"CONDA_PREFIX\", \"\")\n",
+    "# # Improve memory allocation performance, if tcmalloc is not available, please comment this line out\n",
+    "# os.environ[\"LD_PRELOAD\"] = f\"{ld_preload}:{conda_prefix}/lib/libtcmalloc.so\"\n",
+    "\n",
     "# Reduce the overhead of submitting commands to the GPU\n",
     "os.environ[\"SYCL_PI_LEVEL_ZERO_USE_IMMEDIATE_COMMANDLISTS\"] = \"1\"\n",
     "# reducing memory accesses by fusing SDP ops\n",
@@ -151,21 +171,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "source": [
     "___\n",
     "#### Step 2: Initializing the XPU and monitoring GPU memory in realtime 🎮\n",
     "\n",
-    "Next, we'll initialize the Intel Max 1550 GPU, which is referred to as an XPU. We'll use the `intel_extension_for_pytorch` library to seamlessly integrate XPU namespace with. 🤝\n",
+    "Next, we'll initialize the Intel Max 1100 GPU, which is referred to as an XPU. We'll use the `intel_extension_for_pytorch` library to seamlessly integrate XPU namespace with. 🤝\n",
     "\n",
     "##### 👀 GPU Memory Monitoring 👀\n",
     "\n",
-    "To keep track of the Intel Max 1550 GPU (XPU) memory usage throughout this notebook, please refer to the cell below. It displays the current memory usage and updates every 5 seconds, providing you with real-time information about the GPU's memory consumption. 📊\n",
+    "To keep track of the Intel Max 1100 GPU (XPU) memory usage throughout this notebook, please refer to the cell below. It displays the current memory usage and updates every 5 seconds, providing you with real-time information about the GPU's memory consumption. 📊\n",
     "\n",
     "The memory monitoring cell displays the following information:\n",
     "\n",
-    "- XPU Device Name: The name of the Intel Max 1550 GPU being used.\n",
+    "- XPU Device Name: The name of the Intel Max 1100 GPU being used.\n",
     "- Reserved Memory: The amount of memory currently reserved by the GPU.\n",
     "- Allocated Memory: The amount of memory currently allocated by the GPU.\n",
     "- Max Reserved Memory: The maximum amount of memory that has been reserved by the GPU.\n",
@@ -177,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "source": [
     "___\n",
@@ -245,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "source": [
     "___\n",
@@ -277,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "source": [
     "> Note: Before running this notebook, please ensure you have read and agreed to the [Gemma Terms of Use](https://ai.google.dev/gemma/terms). You'll need to visit the Gemma model card on the Hugging Face Hub, accept the usage terms, and generate an access token with write permissions. This token will be required to load the model and push your finetuned version back to the Hub.\n",
@@ -295,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "source": [
     "Now that you have logged in , let's load the model using transformers library:"
@@ -315,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,12 +347,12 @@
     "    device = \"cpu\"\n",
     "print(f\"using device: {device}\")\n",
     "\n",
-    "model_id = \"google/gemma-2b\"\n",
+    "model_id = \"google/gemma-2-2b\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "# Set padding side to the right to ensure proper attention masking during fine-tuning\n",
     "tokenizer.padding_side = \"right\"\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_id).to(device)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_id, attn_implementation='eager').to(device)\n",
     "# Disable caching mechanism to reduce memory usage during fine-tuning\n",
     "model.config.use_cache = False\n",
     "# Configure the model's pre-training tensor parallelism degree to match the fine-tuning setup\n",
@@ -341,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "source": [
     "___\n",
@@ -353,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "source": [
     "___\n",
@@ -402,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "source": [
     "___\n",
@@ -467,22 +487,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
     "import transformers\n",
     "import wandb\n",
     "\n",
-    "from trl import SFTTrainer\n",
+    "from trl import SFTTrainer, SFTConfig\n",
     "\n",
-    "os.environ[\"WANDB_PROJECT\"] = \"gemma_dolly-qa\"  \n",
+    "os.environ[\"WANDB_PROJECT\"] = \"gemma2_dolly-qa\"  \n",
     "os.environ[\"WANDB_LOG_MODEL\"] = \"checkpoint\"\n",
     "os.environ[\"IPEX_TILE_AS_DEVICE\"] = \"1\"\n",
     "\n",
-    "finetuned_model_id = \"unrahul/gemma-2b-dolly-qa\"\n",
-    "PUSH_TO_HUB = True\n",
-    "USE_WANDB = True\n",
+    "finetuned_model_id = \"unrahul/gemma2-2b-dolly-qa\"\n",
+    "PUSH_TO_HUB = False\n",
+    "USE_WANDB = False\n",
     "\n",
     "# Calculate max_steps based on the subset size\n",
     "num_train_samples = len(train_dataset)\n",
@@ -498,36 +518,35 @@
     "    print(f\"Samples/second: {results.metrics['train_samples_per_second']: .2f}\")\n",
     "    get_memory_usage()\n",
     "\n",
-    "training_args = transformers.TrainingArguments(\n",
-    "        per_device_train_batch_size=batch_size,\n",
-    "        gradient_accumulation_steps=gradient_accumulation_steps,\n",
-    "        warmup_ratio=0.05,\n",
-    "        max_steps=max_steps,\n",
-    "        learning_rate=1e-5,\n",
-    "        evaluation_strategy=\"steps\",\n",
-    "        save_steps=500,\n",
-    "        bf16=True,\n",
-    "        logging_steps=100,\n",
-    "        output_dir=finetuned_model_id,\n",
-    "        hub_model_id=finetuned_model_id if PUSH_TO_HUB else None,\n",
-    "        use_ipex=True,\n",
-    "        report_to=\"wandb\" if USE_WANDB else None,\n",
-    "        #push_to_hub=PUSH_TO_HUB,\n",
-    "        max_grad_norm=0.6,\n",
-    "        weight_decay=0.01,\n",
-    "        group_by_length=True\n",
+    "training_args = SFTConfig(\n",
+    "    gradient_checkpointing=True,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    gradient_accumulation_steps=gradient_accumulation_steps,\n",
+    "    warmup_ratio=0.05,\n",
+    "    max_steps=max_steps,\n",
+    "    learning_rate=1e-5,\n",
+    "    save_steps=500,\n",
+    "    bf16=True,\n",
+    "    logging_steps=100,\n",
+    "    output_dir=f'/opt/notebooks/.cache/local_models/{finetuned_model_id}',\n",
+    "    hub_model_id=finetuned_model_id if PUSH_TO_HUB else None,\n",
+    "    use_ipex=True,\n",
+    "    report_to=\"wandb\" if USE_WANDB else \"none\",\n",
+    "    push_to_hub=PUSH_TO_HUB,\n",
+    "    max_grad_norm=0.6,\n",
+    "    weight_decay=0.01,\n",
+    "    group_by_length=True,\n",
+    "    max_seq_length=512,\n",
+    "    packing = True,\n",
     ")\n",
+    "\n",
     "\n",
     "trainer = SFTTrainer(\n",
     "    model=model,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=validation_dataset,\n",
-    "    tokenizer=tokenizer,\n",
     "    args=training_args,\n",
     "    peft_config=lora_config,\n",
-    "    dataset_text_field=\"text\",\n",
-    "    max_seq_length=512,\n",
-    "    packing=True\n",
     ")\n",
     "\n",
     "if device != \"cpu\":\n",
@@ -538,13 +557,13 @@
     "wandb.finish()\n",
     "\n",
     "# save lora model\n",
-    "tuned_lora_model = \"gemma-2b-dolly-qa-lora\"\n",
+    "tuned_lora_model = \"gemma2-2b-dolly-qa-lora\"\n",
     "trainer.model.save_pretrained(tuned_lora_model)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "source": [
     "___\n",
@@ -560,13 +579,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
     "from peft import PeftModel\n",
     "\n",
-    "tuned_model = \"gemma-2b-dolly-qa\"\n",
+    "tuned_model = \"gemma2-2b-dolly-qa\"\n",
     "\n",
     "base_model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_id,\n",
@@ -587,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "source": [
     "___\n",
@@ -601,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "source": [
     "___\n",
@@ -642,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "source": [
     "___\n",
@@ -662,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "source": [
     "### Happy finetuning! 😄✨\n",
@@ -700,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "source": [
     "___\n",
@@ -728,14 +747,6 @@
     "\n",
     "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -754,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
