Updated toxicity example and faq

--- a/Toxicity_Detector_by_Meta.ipynb
+++ b/Toxicity_Detector_by_Meta.ipynb
@@ -212,11 +212,11 @@
    "outputs": [],
    "source": [
     "# Let's load the tokenizer and model \n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "from transformers import RobertaTokenizer, RobertaForSequenceClassification\n",
     "\n",
     "toxicity_model_name = \"facebook/roberta-hate-speech-dynabench-r4-target\"\n",
-    "toxicity_tokenizer = AutoTokenizer.from_pretrained(toxicity_model_name, device_map=\"auto\")\n",
-    "toxicity_model = AutoModelForSequenceClassification.from_pretrained(toxicity_model_name, device_map=\"auto\")\n",
+    "toxicity_tokenizer = RobertaTokenizer.from_pretrained(toxicity_model_name, device_map=\"auto\")\n",
+    "toxicity_model = RobertaForSequenceClassification.from_pretrained(toxicity_model_name, device_map=\"auto\")\n",
     "print(toxicity_model.config.id2label)"
    ]
   },
