--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -28,7 +28,7 @@
     "id": "dfsDR_omdNea"
    },
    "source": [
-    "# Lab 2 - EECE.4860/5860 at UMass Lowell - Spring 2025\n",
+    "# Lab 2 - EECE.4860/5860 at UMass Lowell - Summer 2025\n",
     "\n",
     "This lab is to practice the usage of LoRA to fine-tune a pretrained model, perform quantitative evaluation of model performance, and experiment with Reinforcement Learning with Human Feedback (RLHF) (for EECE.5860 students). You will run Jupyter notebooks on Intel Tiber AI cloud. \n",
     "\n",
